	- Added setup.ini parameters to the internal help system.
	- Started moving the rest of defines.h to setup.ini.
	- General clean up and lots of minor things that get fixed in 
	  passing.
	- Added docs/HACKING.
	- Re arranged some files.
	- New building scripts.
	- Darkbot and convertdb are much cleverer about finding the data
	  files.
	- Cleaned up vars.c and vars.h.

Darkbot 8rc2: May 04, 2006
	- Cleaned generated files out of cvs and updated .cvsignore 
	  files to match.

Darkbot 8rc2: Apr 21, 2006
	- Added most of the help command summaries.

Darkbot 8rc2: Apr 19, 2006
	- Fine tuned what commands can be done where.  In particular
	  any password related commands can only be done in private 
	  now.
	- Made some commands behave consistantly no matter where they 
	  are invoked from.
	- Added HELP COMMANDS.
	- Don't try to send oversize messages, split at a space.

Darkbot 8rc2: Apr 16, 2006
	- Rewrote chansrv.c to use an array of pointers instead
	  of a huge if-else-if.
	- Added patch from nak that stops ops from kicking 
	  themselves via a topic kick.
	- Added HELP <command>.
	- Added isop <nick>.
	- Added level <nick>.

Darkbot 8rc2: Mar 09, 2006
	- Added !WEATHER <zipcode> command. 

Darkbot 8rc2: Nov 07, 2005
	- Fixed spelling errors, the word 'queue' was mispelled
	  throughout the code and in comments.
	- I apparently broke show_banlist() a few releases back 
	  trying to eliminate a type conversion warning, so it's
	  fixed again.
	- B~ (bot nickname) variable can now be used in perform.ini
	- OS command now works on windows.
	- Fixed google command. A search string used to determine
	  successful replies was changed by google.
	- Changed "ugly" message responses.
	- Restart and rehash commands should now work on all operating
	  systems, including Windows.

Darkbot 8rc1: Mar 04, 2005
	- Removed an unneeded line in main.c, that was used to "hide"
	  warnings on WIN32, which is a very bad idea.